kubernetes/clusters/cluster-1/vault/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault-ingress
  namespace: vault
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vault.srv-k8s.server.io`)
      priority: 10
      services:
        - name: vault
          port: 80
    - kind: Rule
      match: Host(`vault.srv-k8s.server.io`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: vault
          port: 80
          scheme: h2c
  tls:
    secretName: vault-tls-secret
